Add NXP_UWB_DEVICE_NODE specifying a device node
SR100S kernel driver is using /dev/sr100, make it possible to use
alternative device node name specified in a configuration file.

Bug: 263423931
Test: Check logcat with and without NXP_UWB_DEVICE_NODE
Change-Id: I8dd807ec1a867d899b2aed0f4dec020bf2bc6f32

--- a/halimpl/config/SR1XX/libuwb-nxp.conf
+++ b/halimpl/config/SR1XX/libuwb-nxp.conf
@@ -9,6 +9,10 @@
 UWB_BOARD_VARIANT_CONFIG=0x01
 UWB_BOARD_VARIANT_VERSION=0x01
 
+#Default device node is /dev/srxxx,
+#you can override it if your kernel driver is exposing it as another name.
+#NXP_UWB_DEVICE_NODE="/dev/sr100"
+#
 ###############################################################################
 #                          Extended CofigID
 #DELAY_CALIBRATION_VALUE    E400
