Nxp Uwb Hal: Includes list of following changes
Bug Fixs
Death HAL notification
country code handling
Ese bind request
AOA support handling
Config file changes
HAL recovery - HAL thermal runaway condition

Bug: 298337188
Test: Manually testing CountryCode, Ranging, SE binding
Change-Id: I8b9355254638c3988dfbd1308fb5c5a48e275f64

--- a/halimpl/config/SR1XX/libuwb-nxp-SR100S.conf
+++ b/halimpl/config/SR1XX/libuwb-nxp-SR100S.conf
@@ -9,10 +9,6 @@
 UWB_BOARD_VARIANT_CONFIG=0x01
 UWB_BOARD_VARIANT_VERSION=0x01
 
-#Default device node is /dev/srxxx,
-#you can override it if your kernel driver is exposing it as another name.
-#NXP_UWB_DEVICE_NODE="/dev/sr100"
-
 ###############################################################################
 #                          Extended CofigID
 #DELAY_CALIBRATION_VALUE    E400
@@ -45,9 +41,9 @@ UWB_CORE_EXT_DEVICE_DEFAULT_CONFIG={20, 04, 00, 23, 05,
 }
 
 ##Note: Session specific default app config configured here
-#ANTENNAS_CONFIGURATION_RX E31C
+#ANTENNAS_CONFIGURATION_RX
 
-NXP_UWB_EXT_APP_DEFAULT_CONFIG={01, E3, 1C, 03, 01, 01, 01}
+NXP_UWB_EXT_APP_DEFAULT_CONFIG={01, 03, 03, 01, 01, 01}
 
 ##Note: Below configs are applicable in User_Mode FW only
 ##Note: WIFI COEX CONFIG Disabled by default, if required add the
@@ -66,6 +62,21 @@ UWB_USER_FW_BOOT_MODE_CONFIG={20, 04, 00, 08, 01,
     E4, 05, 04, 00, 3C, 1E, 1E
 }
 
+#LIST OF UWB CAPABILITY INFO NOT RECEIVED FROM UWBS
+# mapping device caps according to Fira 2.0
+# TODO: Remove once FW support available
+UWB_VENDOR_CAPABILITY={ A7, 04, 01, 00, 00, 00,
+  A8, 04, 05, 00, 00, 00,
+  E3, 01, 01,
+  E4, 04, 64, 00, 00, 00,
+  E5, 04, 03, 00, 00, 00,
+  E6, 01, 01,
+  E7, 01, 01,
+  E8, 04, B0, 04, 00, 00,
+  E9, 04, 05, 00, 00, 00,
+  EA, 02, 09, 00
+}
+
 ###############################################################################
 # Helios PROD Mode FW version
 # Make sure you push the Production FW while using this Macro
@@ -82,12 +93,13 @@ UWB_FW_DOWNLOAD_LOG=0x00
 ###############################################################################
 
 ###############################################################################
-# set Crystal calibration seetings
-# byte[6] 38.4 MHz XTAL CAP1
-# byte[7] 38.4 MHz XTAL CAP2
-# byte[8] 38.4 MHz XTAL GM CONTROL
+# set Crystal calibration settings
+# byte[0] No Of registers
+# byte[2-1] 38.4 MHz XTAL CAP1
+# byte[4-3] 38.4 MHz XTAL CAP2
+# byte[6-5] 38.4 MHz XTAL GM
 
-NXP_UWB_XTAL_38MHZ_CONFIG={2E, 11, 00, 05, 05, 02, FF, FF, 21}
+# NXP_UWB_XTAL_38MHZ_CONFIG={2F, 21, 00, 0A, 05, 01, 07, 03, 0F, 00, 0F, 00, 21, 00}
 
 ###############################################################################
 # This config enable/disable the Vendor extended notifications
