--- a/halimpl/config/SR1XX/libuwb-nxp.conf
+++ b/halimpl/config/SR1XX/libuwb-nxp.conf
@@ -1,5 +1,5 @@
 ###############################################################################
-#Board Varaints and Versions are defined below:
+#Board Variants and Versions are defined below:
 #BOARD_VARIANT_NXPREF    0x01
 #BOARD_NXPREF_VERSIONS(0x01, 0x02)
 
@@ -9,12 +9,8 @@
 UWB_BOARD_VARIANT_CONFIG=0x01
 UWB_BOARD_VARIANT_VERSION=0x01
 
-#Default device node is /dev/srxxx,
-#you can override it if your kernel driver is exposing it as another name.
-#NXP_UWB_DEVICE_NODE="/dev/sr100"
-#
 ###############################################################################
-#                          Extended CofigID
+#Extended ConfigID
 #DELAY_CALIBRATION_VALUE    E400
 #AOA_CALIBRATION_CTRL       E401
 #DPD_WAKEUP_SRC             E402
@@ -72,12 +68,27 @@ UWB_CORE_EXT_DEVICE_SR1XX_S_CONFIG={20, 04, 00, 23, 05,
     E4, 61, 06, 01, 01, 01, 00, 00, 00
 }
 
-##Note: Session specific default app config configured here
-#ANTENNAS_CONFIGURATION_RX E31C
+#LIST OF UWB CAPABILITY INFO NOT RECEIVED FROM UWBS
+# mapping device caps according to Fira 2.0
+# TODO: Remove once FW support available
+UWB_VENDOR_CAPABILITY={A7, 04, 01, 00, 00, 00,
+  A8, 04, 05, 00, 00, 00,
+  E3, 01, 01,
+  E4, 04, 64, 00, 00, 00,
+  E5, 04, 03, 00, 00, 00,
+  E6, 01, 01,
+  E7, 01, 01,
+  E8, 04, B0, 04, 00, 00,
+  E9, 04, 05, 00, 00, 00,
+  EA, 02, 09, 00
+}
 
-NXP_UWB_EXT_APP_DEFAULT_CONFIG={01, E3, 1C, 04, 00, 02, 01, 00}
-NXP_UWB_EXT_APP_SR1XX_T_CONFIG={01, E3, 1C, 04, 00, 02, 01, 00}
-NXP_UWB_EXT_APP_SR1XX_S_CONFIG={01, E3, 1C, 03, 01, 01, 01}
+##Note: Session specific default app config configured here
+#ANTENNAS_CONFIGURATION_RX
+
+NXP_UWB_EXT_APP_DEFAULT_CONFIG={01, 03, 04, 01, 02, 01, 02}
+NXP_UWB_EXT_APP_SR1XX_T_CONFIG={01, 03, 04, 01, 02, 01, 02}
+NXP_UWB_EXT_APP_SR1XX_S_CONFIG={01, 03, 03, 00, 01, 01}
 
 ##Note: Below configs are applicable in User_Mode FW only
 ##Note: WIFI COEX CONFIG Disabled by default, if required add the
@@ -112,12 +123,13 @@ UWB_FW_DOWNLOAD_LOG=0x00
 ###############################################################################
 
 ###############################################################################
-# set Crystal calibration seetings
-# byte[6] 38.4 MHz XTAL CAP1
-# byte[7] 38.4 MHz XTAL CAP2
-# byte[8] 38.4 MHz XTAL GM CONTROL
+# set Crystal calibration settings
+# byte[0] No Of registers
+# byte[2-1] 38.4 MHz XTAL CAP1
+# byte[4-3] 38.4 MHz XTAL CAP2
+# byte[6-5] 38.4 MHz XTAL GM
 
-NXP_UWB_XTAL_38MHZ_CONFIG={2E, 11, 00, 05, 05, 02, FF, FF, 21}
+# NXP_UWB_XTAL_38MHZ_CONFIG={2F, 21, 00, 0A, 05, 01, 07, 03, 0F, 00, 0F, 00, 21, 00}
 
 ###############################################################################
 # This config enable/disable the Vendor extended notifications
@@ -158,4 +170,12 @@ NXP_LOG_FWDNLD_LOGLEVEL=0x05
 NXP_LOG_TML_LOGLEVEL=0x05
 NXP_LOG_UCIX_LOGLEVEL=0x05
 NXP_LOG_UCIR_LOGLEVEL=0x05
+NXP_LOG_EXTNS_LOGLEVEL=0x05
+
+###############################################################################
+# This config provides path of country code config file
+# Multiple path can be added to this.
+# Highest version country code conf file will be considered.
+COUNTRY_CODE_CAP_FILE_LOCATION={"vendor/etc/"}
+###############################################################################
 
