Nxp Uwb Hal: AOSP HAL alignment - low power mode
Bug: 306591911
Test: Manaually testing of UWB init-deinit
Change-Id: If6ab78493e35a49ff39890ca57f977c2326b111d

--- a/halimpl/config/SR1XX/libuwb-nxp.conf
+++ b/halimpl/config/SR1XX/libuwb-nxp.conf
@@ -179,3 +179,7 @@ NXP_LOG_EXTNS_LOGLEVEL=0x05
 COUNTRY_CODE_CAP_FILE_LOCATION={"vendor/etc/"}
 ###############################################################################
 
+###############################################################################
+# UCI config file path
+NXP_UCI_CONFIG_PATH="/vendor/etc/"
+###############################################################################
