--- a/halimpl/config/SR1XX/libuwb-nxp.conf
+++ b/halimpl/config/SR1XX/libuwb-nxp.conf
@@ -180,6 +180,14 @@ COUNTRY_CODE_CAP_FILE_LOCATION={"vendor/etc/"}
 ###############################################################################
 
 ###############################################################################
+# This config provides option to configure binding and locking during uwb init
+# sequence with Mainline FW
+# by default this option is disabled, enable if required
+# binding and locking during uwb init [not allowed = 0x00, allowed = 0x01]
+###############################################################################
+UWB_BINDING_LOCKING_ALLOWED=0x00
+
+###############################################################################
 # UCI config file path
 NXP_UCI_CONFIG_PATH="/vendor/etc/"
 ###############################################################################
