enable dpd entry timeout and GPIO config usage at HAL
Bug: 322728262
Test: Manually testing GPIO config and dpd settings
Change-Id: I2955689099c88940ecce111c0885cc49d8e1b744

--- a/halimpl/config/SR1XX/libuwb-nxp.conf
+++ b/halimpl/config/SR1XX/libuwb-nxp.conf
@@ -15,11 +15,16 @@ UWB_BOARD_VARIANT_VERSION=0x01
 #AOA_CALIBRATION_CTRL       E401
 #DPD_WAKEUP_SRC             E402
 #WTX_COUNT_CONFIG           E403
+#DPD_ENTRY_TIMEOUT          E404
 #WIFI_COEX_FEATURE          E405
   ##Note: WIFI COEX CONFIG Disabled by default, if required add the
   ##      config (E4, 05, 04, 00, 3C, 1E, 1E) and update the
   ##      Lentgh and number of parameter accordingly in the header part.
   ##      WIFI COEX feature supports only in user binary.
+#GPIO_USAGE_CONFIG          E408
+  ##Note: Configure the GPIO for multiple purposes depending on usecase ID
+  ##      config(E4, 08, 03, 00, 00, 00)
+  ##      Length and number of parameter accordingly in the header part.
 #CLK_CONFIG_CTRL            E430
   ##Note: Config for clock source selection and refer UCI specification
   ##      for more information.
@@ -43,26 +48,26 @@ UWB_BOARD_VARIANT_VERSION=0x01
  ##       If required, add config(E4, 64, 01, 01) to update Wifi Co-ex for
  ##       all the channels and update the lentgh and number of parameter
  ##       accordingly in the header part.
-UWB_CORE_EXT_DEVICE_DEFAULT_CONFIG={20, 04, 00, 3F, 06,
-    E4, 02, 01, 00,
+UWB_CORE_EXT_DEVICE_DEFAULT_CONFIG={20, 04, 00, 40, 06,
     E4, 03, 01, b4,
+    E4, 04, 02, f4, 01,
     E4, 28, 04, 02, 02, 02, 00,
     E4, 60, 13, 03, 01, 01, 02, 00, 02, 00, 02, 02, 01, 00, 01, 00, 03, 01, 02, 00, 00, 00,
     E4, 61, 06, 01, 01, 01, 00, 00, 00,
     E4, 62, 0D, 02, 01, 01, 02, 00, 00, 00, 02, 03, 02, 00, 00, 00
 }
 
-UWB_CORE_EXT_DEVICE_SR1XX_T_CONFIG={20, 04, 00, 3F, 06,
-    E4, 02, 01, 00,
+UWB_CORE_EXT_DEVICE_SR1XX_T_CONFIG={20, 04, 00, 40, 06,
     E4, 03, 01, b4,
+    E4, 04, 02, f4, 01,
     E4, 28, 04, 02, 02, 02, 00,
     E4, 60, 13, 03, 01, 01, 02, 00, 02, 00, 02, 02, 01, 00, 01, 00, 03, 01, 02, 00, 00, 00,
     E4, 61, 06, 01, 01, 01, 00, 00, 00,
     E4, 62, 0D, 02, 01, 01, 02, 00, 00, 00, 02, 03, 02, 00, 00, 00
 }
-UWB_CORE_EXT_DEVICE_SR1XX_S_CONFIG={20, 04, 00, 23, 05,
-    E4, 02, 01, 00,
+UWB_CORE_EXT_DEVICE_SR1XX_S_CONFIG={20, 04, 00, 24, 05,
     E4, 03, 01, b4,
+    E4, 04, 02, f4, 01,
     E4, 28, 04, 02, 02, 02, 00,
     E4, 60, 07, 01, 01, 02, 01, 00, 01, 00,
     E4, 61, 06, 01, 01, 01, 00, 00, 00
@@ -102,9 +107,13 @@ NXP_UWB_EXT_APP_SR1XX_S_CONFIG={01, 03, 03, 00, 01, 01}
   ## if required add the
   ##      config (E4, 39, 01, 03) and update the
   ##      Length and number of parameter accordingly in the header part
-
-UWB_USER_FW_BOOT_MODE_CONFIG={20, 04, 00, 08, 01,
-    E4, 05, 04, 00, 3C, 1E, 1E
+#GPIO_USAGE_CONFIG E4 08
+  ## Customer need to set the DPD_WAKEUP_SOURCE as 02 (GPIO1) before applying the GPIO_USAGE_CONFIG command to
+  ## enable time sync notification feature
+UWB_USER_FW_BOOT_MODE_CONFIG={20, 04, 00, 12, 03,
+    E4, 05, 04, 00, 3C, 1E, 1E,
+    E4, 02, 01, 00,
+    E4, 08, 03, 00, 00, 00
 }
 
 ###############################################################################
