Update Conf file
UWBS setting pulse_shape value to the default,
no need to explicitly update from config file.
Added ANTENNAS_CONFIGURATION_RX.

Bug: 335537429
Test: UWB init
Change-Id: I8df56fc489c767c096543580000649dc19c33985

--- a/halimpl/config/SR1XX/libuwb-nxp.conf
+++ b/halimpl/config/SR1XX/libuwb-nxp.conf
@@ -38,6 +38,7 @@ UWB_BOARD_VARIANT_VERSION=0x01
 #ANTENNA_TX_IDX_DEFINE   E461
 #ANTENNA_RX_PAIR_DEFINE  E462
 #WIFI_CO_EX_CH_CFG       E464
+#ANTENNAS_CONFIGURATION_RX E465
  ## Note: Select wifi co-ex channel config
  ##       b0: Channel 5, Set to 1 enable Wifi Co-ex on Channel 5
  ##       b1: Channel 6, Set to 1 enable Wifi Co-ex on Channel 6
@@ -48,29 +49,30 @@ UWB_BOARD_VARIANT_VERSION=0x01
  ##       If required, add config(E4, 64, 01, 01) to update Wifi Co-ex for
  ##       all the channels and update the lentgh and number of parameter
  ##       accordingly in the header part.
-UWB_CORE_EXT_DEVICE_DEFAULT_CONFIG={20, 04, 00, 40, 06,
+UWB_CORE_EXT_DEVICE_DEFAULT_CONFIG={20, 04, 00, 43, 06,
     E4, 03, 01, b4,
     E4, 04, 02, f4, 01,
-    E4, 28, 04, 02, 02, 02, 00,
     E4, 60, 13, 03, 01, 01, 02, 00, 02, 00, 02, 02, 01, 00, 01, 00, 03, 01, 02, 00, 00, 00,
     E4, 61, 06, 01, 01, 01, 00, 00, 00,
     E4, 62, 0D, 02, 01, 01, 02, 00, 00, 00, 02, 03, 02, 00, 00, 00
+    E4, 65, 07, 01, 03, 04, 01, 02, 01, 02
 }
 
-UWB_CORE_EXT_DEVICE_SR1XX_T_CONFIG={20, 04, 00, 40, 06,
+UWB_CORE_EXT_DEVICE_SR1XX_T_CONFIG={20, 04, 00, 43, 06,
     E4, 03, 01, b4,
     E4, 04, 02, f4, 01,
-    E4, 28, 04, 02, 02, 02, 00,
     E4, 60, 13, 03, 01, 01, 02, 00, 02, 00, 02, 02, 01, 00, 01, 00, 03, 01, 02, 00, 00, 00,
     E4, 61, 06, 01, 01, 01, 00, 00, 00,
     E4, 62, 0D, 02, 01, 01, 02, 00, 00, 00, 02, 03, 02, 00, 00, 00
+    E4, 65, 07, 01, 03, 04, 01, 02, 01, 02
 }
-UWB_CORE_EXT_DEVICE_SR1XX_S_CONFIG={20, 04, 00, 24, 05,
+
+UWB_CORE_EXT_DEVICE_SR1XX_S_CONFIG={20, 04, 00, 26, 05,
     E4, 03, 01, b4,
     E4, 04, 02, f4, 01,
-    E4, 28, 04, 02, 02, 02, 00,
     E4, 60, 07, 01, 01, 02, 01, 00, 01, 00,
     E4, 61, 06, 01, 01, 01, 00, 00, 00
+    E4, 65, 06, 01, 03, 03, 00, 01, 01
 }
 
 #LIST OF UWB CAPABILITY INFO NOT RECEIVED FROM UWBS
