Support added for Core set Config command of size greater than 255 bytes
	- handled core set config command of size > 255 bytes
	- GID, OID and data length will be handled in the code

Bug: 335537429
Test: Tested UWB init sequence

Change-Id: I6fd170722a287a42ab36d0902b7bd6e014584618
Signed-off-by: Bhautik Ardeshana <bhautik.ardeshana@nxp.com>

--- a/halimpl/config/SR1XX/libuwb-nxp-SR100S.conf
+++ b/halimpl/config/SR1XX/libuwb-nxp-SR100S.conf
@@ -37,11 +37,11 @@ UWB_BOARD_VARIANT_VERSION=0x01
 #ANTENNA_TX_IDX_DEFINE   E461
 #ANTENNAS_CONFIGURATION_RX E465
 
-UWB_CORE_EXT_DEVICE_DEFAULT_CONFIG={20, 04, 00, 26, 05,
+UWB_CORE_EXT_DEVICE_DEFAULT_CONFIG={05,
     E4, 03, 01, b4,
     E4, 04, 02, f4, 01,
     E4, 60, 07, 01, 01, 02, 01, 00, 01, 00,
-    E4, 61, 06, 01, 01, 01, 00, 00, 00
+    E4, 61, 06, 01, 01, 01, 00, 00, 00,
     E4, 65, 06, 01, 03, 03, 00, 01, 01
 }
 
