--- a/halimpl/config/SR1XX/libuwb-nxp.conf
+++ b/halimpl/config/SR1XX/libuwb-nxp.conf
@@ -49,29 +49,29 @@ UWB_BOARD_VARIANT_VERSION=0x01
  ##       If required, add config(E4, 64, 01, 01) to update Wifi Co-ex for
  ##       all the channels and update the lentgh and number of parameter
  ##       accordingly in the header part.
-UWB_CORE_EXT_DEVICE_DEFAULT_CONFIG={20, 04, 00, 43, 06,
+UWB_CORE_EXT_DEVICE_DEFAULT_CONFIG={06,
     E4, 03, 01, b4,
     E4, 04, 02, f4, 01,
     E4, 60, 13, 03, 01, 01, 02, 00, 02, 00, 02, 02, 01, 00, 01, 00, 03, 01, 02, 00, 00, 00,
     E4, 61, 06, 01, 01, 01, 00, 00, 00,
-    E4, 62, 0D, 02, 01, 01, 02, 00, 00, 00, 02, 03, 02, 00, 00, 00
+    E4, 62, 0D, 02, 01, 01, 02, 00, 00, 00, 02, 03, 02, 00, 00, 00,
     E4, 65, 07, 01, 03, 04, 01, 02, 01, 02
 }
 
-UWB_CORE_EXT_DEVICE_SR1XX_T_CONFIG={20, 04, 00, 43, 06,
+UWB_CORE_EXT_DEVICE_SR1XX_T_CONFIG={06,
     E4, 03, 01, b4,
     E4, 04, 02, f4, 01,
     E4, 60, 13, 03, 01, 01, 02, 00, 02, 00, 02, 02, 01, 00, 01, 00, 03, 01, 02, 00, 00, 00,
     E4, 61, 06, 01, 01, 01, 00, 00, 00,
-    E4, 62, 0D, 02, 01, 01, 02, 00, 00, 00, 02, 03, 02, 00, 00, 00
+    E4, 62, 0D, 02, 01, 01, 02, 00, 00, 00, 02, 03, 02, 00, 00, 00,
     E4, 65, 07, 01, 03, 04, 01, 02, 01, 02
 }
 
-UWB_CORE_EXT_DEVICE_SR1XX_S_CONFIG={20, 04, 00, 26, 05,
+UWB_CORE_EXT_DEVICE_SR1XX_S_CONFIG={05,
     E4, 03, 01, b4,
     E4, 04, 02, f4, 01,
     E4, 60, 07, 01, 01, 02, 01, 00, 01, 00,
-    E4, 61, 06, 01, 01, 01, 00, 00, 00
+    E4, 61, 06, 01, 01, 01, 00, 00, 00,
     E4, 65, 06, 01, 03, 03, 00, 01, 01
 }
 
