Config addition for enabling or disabling URSK and STS_INDEX
Bug: 335537429
Test: None

Change-Id: I7927627739c09d158bab7feb61f65c7d6a70591b
Signed-off-by: Bhautik Ardeshana <bhautik.ardeshana@nxp.com>

--- a/halimpl/config/SR1XX/libuwb-nxp.conf
+++ b/halimpl/config/SR1XX/libuwb-nxp.conf
@@ -120,6 +120,16 @@ UWB_FW_DOWNLOAD_LOG=0x00
 ###############################################################################
 
 ###############################################################################
+#enable or disable delete ursk for ccc session
+DELETE_URSK_FOR_CCC_SESSION=0x00
+###############################################################################
+
+###############################################################################
+#enable or disable sts index overriding for ccc session
+OVERRIDE_STS_INDEX_FOR_CCC_SESSION=0x01
+###############################################################################
+
+###############################################################################
 # set Crystal calibration settings
 # byte[0] No Of registers
 # byte[2-1] 38.4 MHz XTAL CAP1
