UWB config file alignment
Bug: 381814942
Test: None

Change-Id: I7dfc89019b2a3e4e6bfcb49a638761ae98f8da3a
Signed-off-by: Bhautik Ardeshana <bhautik.ardeshana@nxp.com>

--- a/halimpl/config/SR1XX/libuwb-nxp-SR100S.conf
+++ b/halimpl/config/SR1XX/libuwb-nxp-SR100S.conf
@@ -14,13 +14,7 @@ UWB_BOARD_VARIANT_VERSION=0x01
 #DELAY_CALIBRATION_VALUE    E400
 #AOA_CALIBRATION_CTRL       E401
 #DPD_WAKEUP_SRC             E402
-#WTX_COUNT_CONFIG           E403
 #DPD_ENTRY_TIMEOUT          E404
-#WIFI_COEX_FEATURE          E405
-  ##Note: WIFI COEX CONFIG Disabled by default, if required add the
-  ##      config (E4, 05, 04, 00, 3C, 1E, 1E) and update the
-  ##      Lentgh and number of parameter accordingly in the header part.
-  ##      WIFI COEX feature supports only in user binary.
 #GPIO_USAGE_CONFIG          E408
   ##Note: Configure the GPIO for multiple purposes depending on usecase ID
   ##      config(E4, 08, 03, 00, 00, 00)
@@ -28,10 +22,6 @@ UWB_BOARD_VARIANT_VERSION=0x01
 #CLK_CONFIG_CTRL            E430
   ##Note: Config for clock source selection and refer UCI specification
   ##      for more information.
-#UWB_WLAN_5GHZ_CHANNEL_INTERFERENCE_LIST  E432
-  ##Note: List of problematic channels in 5GHz Range, if required add
-  ##      config (E4, 32, 03, 120, 124, 128) and update the
-  ##      Length and number of parameters accordingly in header part.
 # Refer the NXP UCI specification for below configs
 #ANTENNA_RX_IDX_DEFINE   E460
 #ANTENNA_TX_IDX_DEFINE   E461
@@ -45,25 +35,62 @@ UWB_CORE_EXT_DEVICE_DEFAULT_CONFIG={05,
     E4, 65, 06, 01, 03, 03, 00, 01, 01
 }
 
+# This config enable/disable the dpd entry prevention ntf config during init
+# 00 for disable
+# 01 for enable
+UWB_DPD_ENTRY_PREVENTION_NTF_CONFIG=0x01
+
+#This config call's suspend to kernel driver on idle
+#This is only activated when AUTO_SUSPEND_ENABLED=1
+#0=disable
+#1=enable
+AUTO_SUSPEND_ENABLE=0
+#This config defines duration to resume the device before sending any commands
+AUTO_SUSPEND_TIMEOUT_MS=100
+
 ##Note: Below configs are applicable in User_Mode FW only
-##Note: WIFI COEX CONFIG Disabled by default, if required add the
-  ##      config (E4, 05, 04, 00, 3C, 1E, 1E) and update the
-  ##      Lentgh and number of parameter accordingly in the header part.
-  ##      WIFI COEX feature supports only in user binary.
+#WIFI_COEX_FEATURE_ALL_CH  0xF0
+##Note: WIFI_COEX_FEATURE_ALL_CH is disabled by default.
+  ##  Octet[0]: Enable/Disable WiFi CoEx feature
+  ##  0x00: Disable (default)
+  ##  • b[3:0]: Enable/Disable functionality CoEx
+  ##  – 0x1 : Enable CoEx Interface without Debug and without Warning Verbose
+  ##  – 0x2 : Enable CoEx Interface with Debug Verbose only
+  ##  – 0x3 : Enable CoEx Interface with Warnings Verbose only
+  ##  – 0x4 : Enable CoEx Interface with both Debug and Warning Verbose
+  ##  • b[7:4]: CoEx Interface (GPIO) selection:
+  ##  – 0x0 : GPIO Interface
+  ##  – Rest of the values are Reserved
+  ##  Octect[1]: Number of channels N Shall be >= 1 (0 will be rejected by UWBS)
+  ##  N*4 octets to follow
+  ##  Octet[2]: Channel ID
+  ##  Octet[3]: MIN_GUARD_DURATION
+  ##  Octet[4]: MAX_GRANT_DURATION
+  ##  Octet[5]: ADVANCED GRANT DURATION
+  ##  Based on requirement add the below configs:
+  ##  Enable CH5 - (F0, 06, 01, 01, 05, 3C, 1E, 1E)
+  ##  Enable CH9 - (F0, 06, 01, 01, 09, 3C, 1E, 1E)
+  ##  Enable both CH5 and CH9 - (F0, 0A, 01, 02, 05, 3C, 1E, 1E, 09, 3C, 1E, 1E)
+  ##
+  ##  Update the length and number of parameter accordingly in
+  ##  the header part.
+  ##  WIFI COEX feature supports only in user binary.
 #GPIO_USAGE_CONFIG E4 08
-  ## Customer need to set the DPD_WAKEUP_SOURCE as 02 (GPIO1) before applying the GPIO_USAGE_CONFIG command to
-  ## enable time sync notification feature
-UWB_USER_FW_BOOT_MODE_CONFIG={20, 04, 00, 12, 03,
-    E4, 05, 04, 00, 3C, 1E, 1E,
+  ## Customer need to set the DPD_WAKEUP_SOURCE as 02 (GPIO1) before applying
+  ## the GPIO_USAGE_CONFIG command to enable time sync notification feature
+UWB_USER_FW_BOOT_MODE_CONFIG={20, 04, 00, 13, 02,
+    F0, 06, 00, 01, 05, 3C, 1E, 1E,
     E4, 02, 01, 00,
     E4, 08, 03, 00, 00, 00
 }
 
+# Set system time uncertainty value in microsec for CCC ranging
+UWB_INITIATION_TIME_DELTA=200000
+
 #LIST OF UWB CAPABILITY INFO NOT RECEIVED FROM UWBS
 # mapping device caps according to Fira 2.0
 # TODO: Remove once FW support available
-UWB_VENDOR_CAPABILITY={ A7, 04, 01, 00, 00, 00,
-  A8, 04, 05, 00, 00, 00,
+UWB_VENDOR_CAPABILITY={A8, 04, 05, 00, 00, 00,
   E3, 01, 01,
   E4, 04, 64, 00, 00, 00,
   E5, 04, 03, 00, 00, 00,
@@ -71,7 +98,9 @@ UWB_VENDOR_CAPABILITY={ A7, 04, 01, 00, 00, 00,
   E7, 01, 01,
   E8, 04, B0, 04, 00, 00,
   E9, 04, 05, 00, 00, 00,
-  EA, 02, 09, 00
+  EA, 02, 09, 00,
+  AB, 02, 64, 00,
+  EB, 04, 05, 00, 00, 00
 }
 
 ###############################################################################
