Enabling URSK delete for Aliro session
Bug: 397134091
Test: None

Change-Id: Icf113f1b66945ee5741e1ecef4b9e1b7060bedc9
Signed-off-by: Bhautik Ardeshana <bhautik.ardeshana@nxp.com>

--- a/halimpl/config/SR1XX/libuwb-nxp.conf
+++ b/halimpl/config/SR1XX/libuwb-nxp.conf
@@ -120,8 +120,11 @@ UWB_FW_DOWNLOAD_LOG=0x00
 ###############################################################################
 
 ###############################################################################
-#enable or disable delete ursk for ccc session
+# Enable or disable delete ursk for ccc session
 DELETE_URSK_FOR_CCC_SESSION=0x00
+
+# Enable or disable delete ursk for aliro session
+DELETE_URSK_FOR_ALIRO_SESSION=0x00
 ###############################################################################
 
 ###############################################################################
